jEdit 5.3 version history
       (changes since jEdit 5.2.0)
:encoding=UTF-8:

{{{ Version 5.3.1

Thanks to Björn "Vampire" Kautler, Eric Le Lay, Jesse Pavel and Dale Anson for
contributing to this release.

{{{ Bug Fixes

- Fix bug #3944: Select All checkbox disabled.

- Fix bug #3983: filename completion prefered longest filename when no
  match with exact length was found. Prefer the first one (Eric Le Lay)

- Fix bug #3913: beanshell do-while loop bug (Patch #572 Jesse Pavel)

- Fix Java_File_Save macro: accept text after class name (Eric Le Lay)

- Fix bug #3936, better choice for text area corner colors (Dale Anson)

- Fix bug #3717, gutter lines not aligning with text area lines (Dale Anson)

- Fix bug #3937, issue with non-capturing groups in regex search and replace
  (Dale Anson)

- Fix bug #3924, changes to mode files are not detected when ~/.jedit/modes
  is a symlink. (Dale Anson)

- Fix bug #3920, cannot change alpha value of a color in the syntax highlighting
  settings. (Dale Anson)

- Fix bug #3943, issues with move lines up and down macros. (Dale Anson)

- Fix bug #3923, documentation bug about where auto-saved files are saved.
  (Dale Anson)

- Fix bug #3916, null pointer exception in ChunkCache. (Dale Anson)

- Add missing source and target version to compile-installer task to not
  accidentally get an installer that needs a newer Java version than jEdit
  itself does. (Björn "Vampire" Kautler)

- Use new version of JarBundler that also sets LSApplicationCategoryType and
  NSHighResolutionCapable. (Björn "Vampire" Kautler)
  
- Set default colors for foreground and background in syntax highlighting 
  style editor. (Dale Anson)

- Fix plugin bug #1853 XML plugin crashes on JDK9. Don't pre-connect
  the returned URLConnection in jeditresource: protocol handler (Eric Le Lay)
  
- Fix bug #3994, ConcurrentModificationException in ProperyManager. (Dale Anson)  

}}}
{{{ UI Improvements

- UI clean up, button spacing, borders, etc. (Dale Anson)
